added checker if targetDetailList is null